[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
anyhow = "1"
base64 = "0.21.5"
bytes = "1.5.0"
image = "0.24.7"
reqwest = "0.11.14"
tokio = { version = "1.35.1", features = ["full"] }
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
lru = "0.12.1"
percent-encoding = "2.3.1"
photon-rs = "0.3.2"
prost = "0.12.3"
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
listenfd = "1.0.1"

[build-dependencies]
prost-build = "0.12.3"
